update notebook workflow/outline

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyPf6aCPKymRsmwtoEoO2DNC",
+      "authorship_tag": "ABX9TyNHEhQYMlTUYmYtp6fntOyY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,13 @@
         "* `Sea Lake`\n",
         "\n",
         "The benchmark dataset can be used to detect `land cover / land use changes`. The geo-referenced datasset EuroSAT is publicly accessible here: https://github.com/phelber/eurosat\n",
+        "\n",
+        "## Notebook Outline\n",
+        "* 1 - Load the EuroSAT benchmark dataset as input data\n",
+        "* 2 - Create training and test subsets from input data\n",
+        "* 3 - Define the Convolutional Neural Network architecture\n",
+        "* 4 - Fit (train) the convolutional neural network (CNN)\n",
+        "* 5 - Evaluate the performance of the CNN model with a confusion matrix\n",
         "\n"
       ]
     },
