--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -5,9 +5,8 @@
     "colab": {
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNHEhQYMlTUYmYtp6fntOyY",
+      "authorship_tag": "ABX9TyNtuvTufUbjQh1G2mJ8eVeC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,8 +77,59 @@
         "* 3 - Define the Convolutional Neural Network architecture\n",
         "* 4 - Fit (train) the convolutional neural network (CNN)\n",
         "* 5 - Evaluate the performance of the CNN model with a confusion matrix\n",
-        "\n"
+        "\n",
+        "\n",
+        "**Import Libraries**"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hsppuKATLSor"
+      },
+      "source": [
+        "## Begin S3FS Import Snippet ##\n",
+        "import os, sys\n",
+        "s3_home = os.getcwd()\n",
+        "try: sys.path.remove(s3_home) # Remove the S3 from the $path\n",
+        "except Exception: pass\n",
+        "\n",
+        "current_dir = os.get_cwd()\n",
+        "\n",
+        "os.chdir('/home/jovyan') # Temporarily move to another directory\n",
+        "\n",
+        "# Begin imports #\n",
+        "from tensorflow import Keras\n",
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
+        "from tensorflow.keras.layers import Conv2D, MaxPooling2D\n",
+        "from tensorflow.keras.callbacks import ModelCheckpoint\n",
+        "\n",
+        "import glob\n",
+        "\n",
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "\n",
+        "from osgeo import gdal_arrar\n",
+        "from matplotlib import pyplot as pyplot\n",
+        "\n",
+        "from sklearn import metrics\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "import zipfile\n",
+        "# end imports #\n",
+        "\n",
+        "os.chdir(current_dir) # go back to your previous dir\n",
+        "\n",
+        "sys.path.append(s3_home) # restore the s3 root in the $path\n",
+        "\n",
+        "## end s3fs import snippet ##\n",
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -87,7 +137,92 @@
         "id": "ttI_pu8vzd8_"
       },
       "source": [
-        ""
+        "# !unzip \"drive/MyDrive/Land Classification/S2_Tile_based_classification.zip\" -d \"drive/MyDrive/Land Classification/\""
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "X-DF0lwEWyWk"
+      },
+      "source": [
+        "Define helper functions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b3mvsK6CKOO-"
+      },
+      "source": [
+        "from_folder_to_stack"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pwNtHfldXIaf"
+      },
+      "source": [
+        "'''\n",
+        "function name:\n",
+        "  from_folder_to_stack\n",
+        "description:\n",
+        "  This function transforms the .SAFE file into three different arrays (10m, 20m and 60m).\n",
+        "Input:\n",
+        "  safe_path: the path of the .SAFE file;\n",
+        "  data_bands_20m: if True, the fumnction computes stack using Sentinel2 band with 20m of pixel resolution (default=True);\n",
+        "  data_bands_60m: if True, the function computes stack using Sentinel2 band with 60m of pixel resolution (default=True);\n",
+        "Output:\n",
+        "  stack_10m: stack with the following S2L1C bands (B02, B03, B04, B08)\n",
+        "  stack_20m: stack with the following S2L1C bands (B05, B06, B07, B11, B12, B8A)\n",
+        "  stack_60m: stack with the following S2L1C bands (B01, mB09, B10)\n",
+        "'''\n",
+        "def from_folder_to_stack(\n",
+        "    safe_path,\n",
+        "    data_bands_20m=True,\n",
+        "    data_bands_60m=True,\n",
+        "    );\n",
+        "\n",
+        "  level_folder_name_list = glob.glob(safe_path + 'GRANULE/*')\n",
+        "  level_folder_name = level_folder_name_list[0]\n",
+        "\n",
+        "  if level_folder_name.find(\"L2A\") < 0:\n",
+        "    safe_path = [level_folder_name + '/IMG_DATA/']\n",
+        "  else:\n",
+        "    safe_path_10m = level_folder_name + '/IMG_DATA/R10m/'\n",
+        "    safe_path = [safe_path_10m]\n",
+        "\n",
+        "  text_files = []\n",
+        "\n",
+        "  for i in range(0, len(safe_path)):\n",
+        "      print(\"[AI4EO_MOOC]_log: Loading .jp2 images in %s\" % (safe_path[i]))\n",
+        "      text_files_tmp = [f for f in os.listdir(safe_path[i]) if f.endswith('.jp2')]\n",
+        "      text_files.append(text_files_tmp)\n",
+        "\n",
+        "  lst_stack_60m=[]\n",
+        "  lst_code_60m=[]\n",
+        "  lst_stack_20m=[]\n",
+        "  lst_code_20m=[]\n",
+        "  lst_stack_10m=[]\n",
+        "  lst_code_10m=[]\n",
+        "  for i in range(0, len(safe_path)):\n",
+        "\n",
+        "    print(\"[AI4EO_MOOC]_log: Reading .jp2 files in %s\" % (safe_path[i]))\n",
+        "    for name in range(0, len(text_files[i]))\n",
+        "      text files tmp = text files[i]\n",
+        "      if data_bands_60m == True:\n",
+        "        cond_60m = ( (text_files_tmp[name].find(\"B01\") > 0) or (text_files_tmp[name].find(\"B09\") > 0)\n",
+        "                    or (text_files_tmp[name].find(\"B10\") > 0))\n",
+        "        if cond_60m:\n",
+        "            print(\"[AI4EO_MOOC]_log: Using .jp2 image: %s\" % text_files_tmp[name])\n",
+        "            lst_stack_60m.append(gdal_array.LoadFile(safe_path[i] + text_files_tmp[name]))\n",
+        "            lst_code_60m.append(text_files_tmp[name][24:26])\n",
+        "\n",
+        "      if data_bands_20m == True:\n",
+        "        \n"
       ],
       "execution_count": null,
       "outputs": []
