Define helper functions

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNtuvTufUbjQh1G2mJ8eVeC",
+      "authorship_tag": "ABX9TyObW7+hS/QsZY5TIQs5L4FD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,7 +163,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pwNtHfldXIaf"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 130
+        },
+        "id": "pwNtHfldXIaf",
+        "outputId": "da8951ee-0bb3-4612-979d-a81d08b2a4a5"
       },
       "source": [
         "'''\n",
@@ -184,7 +189,7 @@
         "    safe_path,\n",
         "    data_bands_20m=True,\n",
         "    data_bands_60m=True,\n",
-        "    );\n",
+        "    ):\n",
         "\n",
         "  level_folder_name_list = glob.glob(safe_path + 'GRANULE/*')\n",
         "  level_folder_name = level_folder_name_list[0]\n",
@@ -211,8 +216,8 @@
         "  for i in range(0, len(safe_path)):\n",
         "\n",
         "    print(\"[AI4EO_MOOC]_log: Reading .jp2 files in %s\" % (safe_path[i]))\n",
-        "    for name in range(0, len(text_files[i]))\n",
-        "      text files tmp = text files[i]\n",
+        "    for name in range(0, len(text_files[i]):\n",
+        "      text_files_tmp = text_files[i]\n",
         "      if data_bands_60m == True:\n",
         "        cond_60m = ( (text_files_tmp[name].find(\"B01\") > 0) or (text_files_tmp[name].find(\"B09\") > 0)\n",
         "                    or (text_files_tmp[name].find(\"B10\") > 0))\n",
@@ -222,7 +227,70 @@
         "            lst_code_60m.append(text_files_tmp[name][24:26])\n",
         "\n",
         "      if data_bands_20m == True:\n",
-        "        \n"
+        "          cond_20m = (text_files_tmp[name].find(\"B05\") > 0) or (text_files_tmp[name].find(\"B06\") > 0) or (\n",
+        "                      text_files_tmp[name].find(\"B07\") > 0) or (text_files_tmp[name].find(\"B11\") > 0) or (\n",
+        "                                  text_files_tmp[name].find(\"B12\") > 0) or (text_files_tmp[name].find(\"B8A\") > 0)\n",
+        "          cond_60m_L2 = (text_files_tmp[name].find(\"B05_60m\") < 0) and (text_files_tmp[name].find(\"B06_60m\") < 0) and (\n",
+        "                      text_files_tmp[name].find(\"B07_60m\") < 0) and (text_files_tmp[name].find(\"B11_60m\") < 0) and (\n",
+        "                                  text_files_tmp[name].find(\"B12_60m\") < 0) and (text_files_tmp[name].find(\"B8A_60m\") < 0)\n",
+        "          cond_20m_tot = cond_20m and cond_60m_L2\n",
+        "          if cond_20m_tot:\n",
+        "              print(\"[AI4E_MOOC]_log: Using .jp2 image: %s\" % text_files_tmp[name])\n",
+        "              lst_stack_20m.append(gdal_array.LoadFile(safe_path[i] + text_files_tmp[name]))\n",
+        "              lst_code_20m.append(text_files_tmp[name][24:26])\n",
+        "      else:\n",
+        "        stack_20m = 0\n",
+        "\n",
+        "      cond_10m = (text_files_tmp[name].find(\"B02\") > 0) or (text_files_tmp[name].find(\"B03\") > 0) or (\n",
+        "                  text_files_tmp[name].find(\"B04\") > 0) or (text_files_tmp[name].find(\"B08\") > 0)\n",
+        "      cond_20m_L2 = (text_files_tmp[name].find(\"B02_20m\") < 0) and (text_files_tmp[name].find(\"B03_20m\") < 0) and (\n",
+        "                  text_files_tmp[name].find(\"B04_20m\") < 0) and (text_files_tmp[name].find(\"B08_20m\") < 0)\n",
+        "      cond_60m_L2 = (text_files_tmp[name].find(\"B02_60m\") < 0) and (text_files_tmp[name].find(\"B03_60m\") < 0) and (\n",
+        "                  text_files_tmp[name].find(\"B04_60m\") < 0) and (text_files_tmp[name].find(\"B08_60m\") < 0)\n",
+        "      cond_10m_tot = cond_10m and cond_20m_L2 and cond_60m_L2\n",
+        "\n",
+        "      if cond_10m_tot:\n",
+        "          print(\"[AI4E)_MOOC]_log: Using .jp2 image: %s\" % text_files_tmp[name])\n",
+        "          lst_stack_10m.append(gdal_array.LoadFile(safe_path[i] + text_files_tmp[name]))\n",
+        "          lst_code_10m.append(text_files_tmp[name][24:26])\n",
+        "\n",
+        "\n",
+        "stack_10m=np.asarray(lst_stack_10m)\n",
+        "sorted_list_10m = ['02', '03', '04', '08']\n",
+        "print('[AI4EO_MOOC]_log: Sorting stack 10m...')\n",
+        "stack_10m_final_sorted = stack_sort(stack_10m, lst_code_10m, sorted_list_10m)\n",
+        "\n",
+        "stack_20m=np.asarray(lst_stack_10m)\n",
+        "sorted_list_20m = ['05', '06', '07', '11', '12', '8A']\n",
+        "print('[AI4EO_MOOC]_log: Sorting stack 20m...')\n",
+        "stack_20m_final_sorted = stack_sort(stack_20m, lst_code_20m, sorted_list_20m)\n",
+        "            \n",
+        "stack_60m=np.asarray(lst_stack_60m)\n",
+        "sorted_list_60m = ['01', '09', '10']\n",
+        "print('[AI4EO_MOOC]_log: Sorting stack 60m...')\n",
+        "stack_60m_final_sorted = stack_sort(stack_60m, lst_code_60m, sorted_list_60m)\n",
+        "\n",
+        "return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a1294c9f28fc>\"\u001b[0;36m, line \u001b[0;32m46\u001b[0m\n\u001b[0;31m    for name in range(0, len(text_files[i]):\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aW6E0LvU_wB0"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
