define stack_sort helper function

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyObW7+hS/QsZY5TIQs5L4FD",
+      "authorship_tag": "ABX9TyPwdyNE7v9NFjktXbHHw9oF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -163,14 +163,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
-        },
-        "id": "pwNtHfldXIaf",
-        "outputId": "da8951ee-0bb3-4612-979d-a81d08b2a4a5"
+        "id": "pwNtHfldXIaf"
       },
       "source": [
+        "import numpy as np\n",
+        "\n",
         "'''\n",
         "function name:\n",
         "  from_folder_to_stack\n",
@@ -216,7 +213,7 @@
         "  for i in range(0, len(safe_path)):\n",
         "\n",
         "    print(\"[AI4EO_MOOC]_log: Reading .jp2 files in %s\" % (safe_path[i]))\n",
-        "    for name in range(0, len(text_files[i]):\n",
+        "    for name in range(0, len(text_files[i])):\n",
         "      text_files_tmp = text_files[i]\n",
         "      if data_bands_60m == True:\n",
         "        cond_60m = ( (text_files_tmp[name].find(\"B01\") > 0) or (text_files_tmp[name].find(\"B09\") > 0)\n",
@@ -255,39 +252,71 @@
         "          lst_code_10m.append(text_files_tmp[name][24:26])\n",
         "\n",
         "\n",
-        "stack_10m=np.asarray(lst_stack_10m)\n",
-        "sorted_list_10m = ['02', '03', '04', '08']\n",
-        "print('[AI4EO_MOOC]_log: Sorting stack 10m...')\n",
-        "stack_10m_final_sorted = stack_sort(stack_10m, lst_code_10m, sorted_list_10m)\n",
+        "  stack_10m=np.asarray(lst_stack_10m)\n",
+        "  sorted_list_10m = ['02', '03', '04', '08']\n",
+        "  print('[AI4EO_MOOC]_log: Sorting stack 10m...')\n",
+        "  stack_10m_final_sorted = stack_sort(stack_10m, lst_code_10m, sorted_list_10m)\n",
         "\n",
-        "stack_20m=np.asarray(lst_stack_10m)\n",
-        "sorted_list_20m = ['05', '06', '07', '11', '12', '8A']\n",
-        "print('[AI4EO_MOOC]_log: Sorting stack 20m...')\n",
-        "stack_20m_final_sorted = stack_sort(stack_20m, lst_code_20m, sorted_list_20m)\n",
-        "            \n",
-        "stack_60m=np.asarray(lst_stack_60m)\n",
-        "sorted_list_60m = ['01', '09', '10']\n",
-        "print('[AI4EO_MOOC]_log: Sorting stack 60m...')\n",
-        "stack_60m_final_sorted = stack_sort(stack_60m, lst_code_60m, sorted_list_60m)\n",
+        "  stack_20m=np.asarray(lst_stack_20m)\n",
+        "  sorted_list_20m = ['05', '06', '07', '11', '12', '8A']\n",
+        "  print('[AI4EO_MOOC]_log: Sorting stack 20m...')\n",
+        "  stack_20m_final_sorted = stack_sort(stack_20m, lst_code_20m, sorted_list_20m)\n",
+        "              \n",
+        "  stack_60m=np.asarray(lst_stack_60m)\n",
+        "  sorted_list_60m = ['01', '09', '10']\n",
+        "  print('[AI4EO_MOOC]_log: Sorting stack 60m...')\n",
+        "  stack_60m_final_sorted = stack_sort(stack_60m, lst_code_60m, sorted_list_60m)\n",
         "\n",
-        "return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
+        "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-a1294c9f28fc>\"\u001b[0;36m, line \u001b[0;32m46\u001b[0m\n\u001b[0;31m    for name in range(0, len(text_files[i]):\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RwSv2ExkGK9e"
+      },
+      "source": [
+        "stack_sort"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "aW6E0LvU_wB0"
+      },
+      "source": [
+        "def stack_sort(stack_in, lst_code, sorted_list):\n",
+        "  b, r, c = stack_in.shape\n",
+        "  stack_sorted = np.zeros((r,c,b), dtype=np.unit16)\n",
+        "\n",
+        "  len_list_bands = len(lst_code)\n",
+        "\n",
+        "  c = np.zeros((len_list_bands), dtype=np.unit8)\n",
+        "  count = 0\n",
+        "  count_sort = 0\n",
+        "  while count_sort != len_list_bands:\n",
+        "    if lst_code[count] == sorted_list[count_sort]:\n",
+        "      c[count_sort] = count\n",
+        "      count_sort = count_sort + 1\n",
+        "      count = 0\n",
+        "    else:\n",
+        "      count = count + 1\n",
+        "    print('[AI4EO_MOOC]_log: sorted list:', sorted_list)\n",
+        "    print('[AI4EO_MOOC]_log: bands:', c)\n",
+        "    for i in range(0, len_list_bands):\n",
+        "        stack_sorted[:,:,i]=stack_in[c[i],:,:]\n",
+        "    \n",
+        "    return stack_sorted"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ncaoujg8H-7h"
       },
       "source": [
         ""
