Loop over the training data folders and build up List of training arrays & list of arrays for image classes

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyPwdyNE7v9NFjktXbHHw9oF",
+      "authorship_tag": "ABX9TyMjSnkyxJKHNemauQTyTVna",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,12 +94,12 @@
         "try: sys.path.remove(s3_home) # Remove the S3 from the $path\n",
         "except Exception: pass\n",
         "\n",
-        "current_dir = os.get_cwd()\n",
+        "# current_dir = os.getcwd()\n",
         "\n",
-        "os.chdir('/home/jovyan') # Temporarily move to another directory\n",
+        "# os.chdir('/home/jovyan') # Temporarily move to another directory\n",
         "\n",
         "# Begin imports #\n",
-        "from tensorflow import Keras\n",
+        "from tensorflow import keras\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense, Dropout, Activation, Flatten\n",
@@ -112,7 +112,7 @@
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "\n",
-        "from osgeo import gdal_arrar\n",
+        "from osgeo import gdal_array\n",
         "from matplotlib import pyplot as pyplot\n",
         "\n",
         "from sklearn import metrics\n",
@@ -128,7 +128,7 @@
         "## end s3fs import snippet ##\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "source": [
         "# !unzip \"drive/MyDrive/Land Classification/S2_Tile_based_classification.zip\" -d \"drive/MyDrive/Land Classification/\""
       ],
-      "execution_count": 2,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -269,7 +269,7 @@
         "\n",
         "  return stack_10m_final_sorted, stack_20m_final_sorted, stack_60m_final_sorted"
       ],
-      "execution_count": 17,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -310,13 +310,169 @@
         "    \n",
         "    return stack_sorted"
       ],
-      "execution_count": 18,
+      "execution_count": 38,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aXYkZZV_IrQs"
+      },
+      "source": [
+        "resample_3d"
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "mIS-jKoKI8uK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lJ0Kp7sWIwPk"
+      },
+      "source": [
+        "sentinel2_format"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eg3mAuYCJAO-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z_P1HyB9I3Y8"
+      },
+      "source": [
+        "sliding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yfdgOtpfI-TY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Ncaoujg8H-7h"
+      },
+      "source": [
+        "# **1. Load the EuroSAT benchmark dataset as input data**\n",
+        "The `EuroSAT benchmark dataset` is `drive/MyDrive/Land Classificatiion/S2_Tile_based_classification/01_Input_data/S2_tile_4_training/`. This folder contains a folder for each of the ten land cover classes. The first step involves loading all the EuroSAT images from all the folders as a `numpy` array. You can use the function `.LoadFile` from the GDAL Python bindings module `gdal_array` to read a raster image (e.g. in `.tif` format) into a `numpy.array`.\n",
+        "\n",
+        "The result is `lst_arr_training`, a list of 10,000 arrays and each array has the dimension `[13, 64, 64]`. For each of the images we want to create a `numpy.array` with ten entries indicating in binary form (0 or 1) the class the image belongs to. The resulting list is called `lst_gt_training` and has the same length as the list of training images.\n",
+        "\n",
+        "**NOTE**: for training purposes, the example only makes use of a subset of 10,000 images of the EuroSAT benchmark dataset(27,000 images).\n",
+        "\n",
+        "\n",
+        "Define the folder where the EuroSAT training images are located."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NWlvPBWKQhQD"
+      },
+      "source": [
+        "# MAIN_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/'\n",
+        "DATA_PATH = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/01_Input_data/S2_tile_4_training/'"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b5F7sVtqRBWN"
+      },
+      "source": [
+        "Loop over the training data folders and build up two lists:\n",
+        "\n",
+        "* `lst_arr_training` - List of training arrays\n",
+        "* `lst_gt_training` _ List of arrays indicating to which class each image belongs to"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cPzhHYgYRjp0",
+        "outputId": "ea52f003-6461-40ea-a3d8-396d82177746"
+      },
+      "source": [
+        "import glob\n",
+        "len_data_for_training_tmp = 1000\n",
+        "# folder_for_training = glob.glob(MAIN_PATH+DATA_PATH+'*/')\n",
+        "folder_for_training = glob.glob(DATA_PATH+'*/')\n",
+        "\n",
+        "print('[AI4EO_MOOC]_log: There are %d folders' % (len(folder_for_training)))\n",
+        "\n",
+        "lst_arr_training=[]\n",
+        "lst_gt_training = []\n",
+        "for i in range(0,len(folder_for_training)):\n",
+        "  data_for_training_tmp=glob.glob(folder_for_training[i]+'*.tif')\n",
+        "\n",
+        "  print('[AI4EO_MOOC]_log: There are %d images for %s class' % (\n",
+        "      \n",
+        "      len_data_for_training_tmp, folder_for_training[i][40:-1])\n",
+        "      )\n",
+        "  \n",
+        "  for j in range(0, len_data_for_training_tmp):\n",
+        "      arr_tmp = gdal_array.LoadFile(data_for_training_tmp[j])\n",
+        "      lst_arr_training.append(arr_tmp)\n",
+        "      tmp_gt = np.zeros(10)\n",
+        "      tmp_gt[i]=1\n",
+        "      lst_gt_training.append(tmp_gt)"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: There are 10 folders\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/AnnualCrop class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Forest class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/HerbaceousVegetation class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Highway class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Industrial class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Pasture class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/PermanentCrop class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/Residential class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/River class\n",
+            "[AI4EO_MOOC]_log: There are 1000 images for e_based_classification/01_Input_data/S2_tile_4_training/SeaLake class\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZTGiHQLMUg-q"
       },
       "source": [
         ""
