Reshape multi-array to AI readable shape

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -6,7 +6,7 @@
       "name": "Tile-based classification using Sentinel-2 and EuroSAT data-Training.ipynb",
       "provenance": [],
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyMjSnkyxJKHNemauQTyTVna",
+      "authorship_tag": "ABX9TyP6iuVrvK3pK/PtK53dOfyh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -472,7 +472,191 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZTGiHQLMUg-q"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZTGiHQLMUg-q",
+        "outputId": "3ae05326-8750-42a4-88bc-290eb60615c4"
+      },
+      "source": [
+        "type(lst_gt_training[0])"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c5lcmavLjt1U"
+      },
+      "source": [
+        "Let us inspect the length of the created lists as well as the dimensions of the images. Both lists have a length of 10,000 items and each image have the following dimension[13, 64,64]. The binary class vector has a length of 10, representing the 10 land cover classes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8-DPXIFwcHND",
+        "outputId": "b54efcd0-2fae-46a7-a152-2762e5e48a03"
+      },
+      "source": [
+        "print(len(lst_arr_training), len(lst_gt_training))\n",
+        "print(lst_arr_training[1000-1].shape, lst_gt_training[1000-1].shape)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000 10000\n",
+            "(13, 64, 64) (10,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "COULy5n1kovI"
+      },
+      "source": [
+        "Next, we'll transform the two lists of arrays into multistack arrays. This can be done with the numPy function `.asarray()`. The result is two numpy arrays with the following specifications:   \n",
+        "* `arr_training`: 4 dimensions (10000, 13, 64, 64)-->(number of images, bands, rows, columns)\n",
+        "* `arr_gt`: 2 dimensions (10000, 10)--> (number of images, columns)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aqN3NZlCkkje",
+        "outputId": "28577a42-5313-4e90-ae5f-d91dc62ecb61"
+      },
+      "source": [
+        "arr_training = np.asarray(lst_arr_training)\n",
+        "arr_gt = np.asarray(lst_gt_training)\n",
+        "\n",
+        "arr_training.shape, arr_gt.shape"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((10000, 13, 64, 64), (10000, 10))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xhaCTdEjl-TV"
+      },
+      "source": [
+        "##**Reshape the multi-array's native shape to an AI readable shape**\n",
+        "\n",
+        "We have to reshape the array with the training images from its native shape(10000, 13,64,64) to a shape that is readable by Artificial Intelligence algorithms. For this reason, the multi-dimension array `arr_training` needs to be re-organised into the following dimensions:   \n",
+        "* `arr_training_res`: 4 dimensions(10000,64,64,13)-->(number of images, rows, columns, bands)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FpxHfBGzl1f7",
+        "outputId": "ceecf775-c9fd-494c-81b5-82c9c2cb89e6"
+      },
+      "source": [
+        "num_of_img,bands,rows,columns=arr_training.shape\n",
+        "print('[AI4EO_MOOC]_log: Reshape array from native shape (num_of_img:%d, bands:%d, rows:%d, columns:%d) to AI readable shape (num_of_img:%d, rows:%d, columns:%d, bands:%d)...' % (num_of_img,bands,rows,columns, num_of_img,rows,columns,bands))\n",
+        "\n",
+        "arr_training_res = np.reshape(arr_training,(num_of_img,rows,columns,bands))\n",
+        "arr_training_res.shape"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[AI4EO_MOOC]_log: Reshape array from native shape (num_of_img:10000, bands:13, rows:64, columns:64) to AI readable shape (num_of_img:10000, rows:64, columns:64, bands:13)...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(10000, 64, 64, 13)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ElXLe1k7oLH8",
+        "outputId": "de6a2ffe-f8aa-47ea-a58c-7bdcb1d384bb"
+      },
+      "source": [
+        "type(arr_training_res)"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "numpy.ndarray"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pD44WxPToUOo"
+      },
+      "source": [
+        "##**Normalisation of the image radiances to a [0,1] interval**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ISTo5OOHoSrV"
       },
       "source": [
         ""
